# src/controllers/review.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Get, Path, Post, Route, Tags } from 'tsoa';
+import { Body, Controller, Get, Patch, Path, Post, Route, Tags } from 'tsoa';
 import { ReviewDTO } from '../dto/review.dto';
 import { reviewService } from '../services/review.service';
 
@@ -21,5 +21,14 @@ export class ReviewController extends Controller {
   ): Promise<ReviewDTO> {
     const { review_text, rating, game_id } = requestBody;
     return reviewService.createReview(review_text, rating, game_id);
+  }
+
+  @Patch('{id}')
+  public async updateReview(
+    @Path() id: number,
+    @Body() requestBody: ReviewDTO
+  ): Promise<ReviewDTO | null> {
+    const { review_text, rating, game_id } = requestBody;
+    return reviewService.updateReview(id, review_text, rating, game_id);
   }
 }
